--- a/definitions/stitch.yml
+++ b/definitions/stitch.yml
@@ -1449,10 +1449,10 @@ x-groups:
       application/json:
         $ref: '#/components/schemas/EventCreated'
       leg:
--    name: "Leg"
--    order: 4
--    description: >-
--      A leg can be a video call, IP call, or PSTN call that users participate in using multiple platforms. With this endpoint you can retrieve the details about all of the legs that took place in your application.
--    schema:
--      application/json:
--        $ref: '#/components/schemas/Leg' 
+   name: "Leg"
+   order: 4
+   description: >-
+     A leg can be a video call, IP call, or PSTN call that users participate in using multiple platforms. With this endpoint you can retrieve the details about all of the legs that took place in your application.
+   schema:
+     application/json:
+       $ref: '#/components/schemas/Leg' 
